[package]
name = "svg"
version = "0.0.1"
authors = ["letang.jeremy@gmail.com", "viperscape <chrisfgill@gmail.com>"]
license = "MIT"

[lib]
name = "svg"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
num = "*"

[dependencies.RustyXML]
git = "https://github.com/Florob/RustyXML"